--- a/Home Assignment/CarGame/Assembly-CSharp.csproj
+++ b/Home Assignment/CarGame/Assembly-CSharp.csproj
@@ -59,12 +59,14 @@
     <Compile Include="Assets\Scripts\Obstacle.cs" />
     <Compile Include="Assets\Scripts\BackgroundScroller.cs" />
     <Compile Include="Assets\Scripts\ObstacleDestroyer.cs" />
+    <Compile Include="Assets\Scripts\MusicPlay.cs" />
     <Compile Include="Assets\Scripts\DamageDealer.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
     <Compile Include="Assets\Scripts\Level.cs" />
     <Compile Include="Assets\Scripts\ObstacleSpawner.cs" />
     <Compile Include="Assets\Scripts\WaveConfig.cs" />
-    <Compile Include="Assets\Scripts\MusicPlay.cs" />
+    <Compile Include="Assets\GameSession.cs" />
+    <Compile Include="Assets\Scripts\ScoreDisplay.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
